# next-rust-webgl-poc

./: .gitignore  README.md  next.config.js  package-lock.json  package.json
pages/: index.js
renderer/: Cargo.toml
renderer/src/: main.rs
