[package]
name = "renderer"
version = "0.1.0"
authors = ["Nicolas Melo <nicolasmelo12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path="./src/main.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.45"
wasm-bindgen = "0.2.68"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]